# wallr

./: car.ino  target.py  tracker.py  wallr
car/: protocol.h
car/car_firmware/: BH1750.cpp  BH1750.h  car_firmware.ino  protocol.h
car/daemon/: carlink.cpp  makefile
car/daemon/fusekit-0.6.5/: Makefile.in  aclocal.m4  configure
car/daemon/fusekit-0.6.5/debian/.svn/: all-wcprops  entries
car/daemon/fusekit-0.6.5/example/: Makefile.in
car/daemon/fusekit-0.6.5/include/: Makefile.in
car/daemon/nRF24/: bcm2835.h
firmware/wallr/: wallr.ino
mechanical/: base.SLDPRT  stud_M2.SLDPRT  stud_M3.SLDPRT
mechanical/models/: Audio.sldprt  Camera.sldprt  CameraAssembly.sldasm  CameraTop.sldprt  GPIO.sldprt  GPU.sldprt  HDMI.sldprt  Mainboard.sldprt  MicroSD.sldprt  MicroSDSocket.sldprt  MicroUSB.sldprt  OVA5647.SLDASM  OVA5647.SLDPRT  OVA5647_IR-Glas.SLDPRT  OVA5647_Lens.SLDPRT  Processor.sldprt  RAM.sldprt  RJ45.sldprt  RasPi_Camera.SLDASM  RasPi_Camera_Board.SLDPRT  RaspberryPi2.SLDASM  USB.sldprt
mechanical/production/: base.STL
raspicap/: CMakeLists.txt  RaspiCamControl.cpp  RaspiCamControl.h  raspicap.c  raspicap.cpp  setup.py
src/: CarLink.py  Clock.py  FuelGauge.py  GameResource.py  ProgressBar.py  StaticSprite.py  Timer.py  TrackerLogPlayer.py  TrackerProxy.py  TrafficLights.py  WallrResources.py  WallrSettings.py  WallrVideo.py  WallrVideoV4L.py  animation.py  target.py  tracker.py  trkutil.py  wallr.ini  wallr.py
test/: sizetest.py  test_tracker.py  test_widgets.py
